--- a/Barnes-Hut/Barnes-Hut.cabal
+++ b/Barnes-Hut/Barnes-Hut.cabal
@@ -1,20 +1,20 @@
-name:                Direct-Simulation
+name:                Barnes-Hut
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/adityavkk/
+homepage:            https://github.com/adityavkk/N-Body-Simulations
 license:             BSD3
 license-file:        LICENSE
-author:              Aditya V K
+author:              Aditya K
 maintainer:          adityavkk@gmail.com
-copyright:           2017 Aditya V K
+copyright:           2017 Aditya K
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-executable Direct-Simulation
+executable Barnes-Hut
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, gloss==1.10.*
+  build-depends:       base >= 4.7 && < 5
