--- a/Barnes-Hut/Barnes-Hut.cabal
+++ b/Barnes-Hut/Barnes-Hut.cabal
@@ -17,4 +17,4 @@ executable Barnes-Hut
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5 , gloss==1.10.*
