--- a/Barnes-Hut/Barnes-Hut.cabal
+++ b/Barnes-Hut/Barnes-Hut.cabal
@@ -13,8 +13,39 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-executable Barnes-Hut
+library
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+  exposed-modules:     Gravity
+                       Bodies
+                       DataTypes
+                       BarnesHut
+  build-depends:       base >= 4.7 && < 5 
+                     , gloss==1.10.*
+  ghc-options:        -fwarn-unused-imports
+                      -fwarn-tabs
+                      -fwarn-missing-signatures
+                      -fwarn-incomplete-patterns
+
+executable Barnes-Hut-Exe
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5 , gloss==1.10.*
+  build-depends:       Barnes-Hut
+                     , base >= 4.7 && < 5 
+                     , gloss==1.10.*
+  ghc-options:        -fwarn-unused-imports
+                      -fwarn-tabs
+                      -fwarn-missing-signatures
+                      -fwarn-incomplete-patterns
+
+test-suite Barnes-Hut-Test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:       base
+                     , QuickCheck
+                     , hspec
+                     , Barnes-Hut
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
