get a first draft of randomly generated universe set up with QuickCheck randomness

--- a/Barnes-Hut/Barnes-Hut.cabal
+++ b/Barnes-Hut/Barnes-Hut.cabal
@@ -22,6 +22,7 @@ library
                        BarnesHut
   build-depends:       base >= 4.7 && < 5 
                      , gloss==1.10.*
+                     , QuickCheck
   ghc-options:        -fwarn-unused-imports
                       -fwarn-tabs
                       -fwarn-missing-signatures
@@ -34,6 +35,7 @@ executable Barnes-Hut-Exe
   build-depends:       Barnes-Hut
                      , base >= 4.7 && < 5 
                      , gloss==1.10.*
+                     , QuickCheck
   ghc-options:        -fwarn-unused-imports
                       -fwarn-tabs
                       -fwarn-missing-signatures
