--- a/Direct-Simulation/Direct-Simulation.cabal
+++ b/Direct-Simulation/Direct-Simulation.cabal
@@ -1,20 +1,21 @@
-name:                Direct-Simulation
-version:             0.1.0.0
+name:          Direct-Simulation
+version:       0.1.0.1
 -- synopsis:
 -- description:
-homepage:            https://github.com/adityavkk/
-license:             BSD3
-license-file:        LICENSE
-author:              Aditya V K
-maintainer:          adityavkk@gmail.com
-copyright:           2017 Aditya V K
-category:            Web
-build-type:          Simple
-cabal-version:       >=1.10
+homepage:      https://github.com/adityavkk/
+license:       BSD3
+license-file:  LICENSE
+author:        Aditya V K
+maintainer:    adityavkk@gmail.com
+copyright:     2017 Aditya V K
+category:      Web
+build-type:    Simple
+cabal-version: >=2.0
 extra-source-files:  README.md
 
 executable Direct-Simulation
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, gloss==1.10.*
+  build-depends:       base  ^>= 4.14
+                     , gloss ^>= 1.13.2.1
